# evolver

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
Evolver/: .env.example  .gitignore  README.md
Evolver/.github/workflows/: ci.yml
Evolver/backend/: .dockerignore  Dockerfile  alembic.ini
Evolver/backend/app/: __init__.py
Evolver/backend/app/api/: health.py
Evolver/backend/app/core/: config.py  redis.py
Evolver/backend/app/exchanges/: binance.py
Evolver/backend/app/models/: __init__.py  base.py  market.py  paper.py  strategy.py
Evolver/backend/scripts/: backfill.py
Evolver/docs/: architecture.md  dna_chromosome.md  llm_strategy.md
Evolver/frontend/: .gitignore  Dockerfile  next.config.ts
Evolver/frontend/src/app/: globals.css  layout.tsx
Evolver/infra/dokploy/: compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_system_settings.py  0003_replay_tables.py  0004_drop_news.py  0005_funding_rates.py  0006_drop_legacy_tables.py  0007_fng_index.py
backend/app/: main.py
backend/app/allocator/: __init__.py  engine.py
backend/app/api/v1/: __init__.py  allocator.py  backtest.py  carry.py  data_mgmt.py  ga.py  indicators.py  live.py  news.py  ohlcv.py  oos.py  paper.py  postmortem.py  regime.py  replay.py  sentiment.py  statarb.py  system.py  trend.py  validation.py
backend/app/backtest/: __init__.py  engine.py  metrics.py  strategies.py  walk_forward.py
backend/app/carry/: __init__.py  engine.py
backend/app/core/: config.py  db.py  logging.py
backend/app/exchanges/: binance.py
backend/app/ga/: __init__.py  chromosome.py  fitness.py  runner.py  state.py
backend/app/indicators/: __init__.py  core.py
backend/app/live/: __init__.py  router.py
backend/app/metrics/: __init__.py  deflated_sharpe.py
backend/app/models/: __init__.py  funding.py  news.py  paper.py  replay.py  sentiment.py  strategy.py  system.py
backend/app/news/: __init__.py  ingester.py  pipeline.py  repository.py  scorer.py  sources.py
backend/app/oos/: __init__.py  runner.py
backend/app/paper/: __init__.py  engine.py  repository.py
backend/app/postmortem/: __init__.py  analyzer.py
backend/app/regime/: __init__.py  detector.py
backend/app/replay/: __init__.py  council.py  evolver.py  genome.py  repo.py  runner.py  runner_backtest.py
backend/app/repositories/: __init__.py  funding.py  ohlcv.py  sentiment.py
backend/app/schemas/: __init__.py  allocator.py  backtest.py  carry.py  ga.py  indicator.py  live.py  news.py  ohlcv.py  oos.py  paper.py  postmortem.py  regime.py  replay.py  sentiment.py  statarb.py  system.py  trend.py
backend/app/sentiment/: __init__.py  fng_fetcher.py
backend/app/statarb/: __init__.py  engine.py
backend/app/system/: __init__.py  maintenance.py  scheduler.py  settings.py
backend/app/trend/: __init__.py  donchian.py  engine.py
backend/app/validation/: __init__.py  runner.py
backend/tests/: test_backtest.py  test_ga.py  test_news.py  test_smoke.py
docs/: deploy_dokploy.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: CandlesTable.tsx  ConfirmDialog.tsx  DiversityChart.tsx  EquityCurve.tsx  EvolutionLog.tsx  FitnessLandscape.tsx  HealthBadge.tsx  IndicatorControls.tsx  IndicatorPanel.tsx  MetricCards.tsx  NewsStatsCards.tsx  NewsTable.tsx  ParameterHistograms.tsx  ParetoFront.tsx  PopulationCloud.tsx  PostmortemPanel.tsx  PriceChart.tsx  ProgressBar.tsx  RegimeBadge.tsx  SentimentBadge.tsx  StrategyLeaderboard.tsx  TradesTable.tsx  WalkForwardPanel.tsx
frontend/src/lib/: api.ts
infra/dokploy/: compose.yml
(+15 files in other folders)
