[project]
name = "evolver-backend"
version = "0.1.0"
description = "Evolver — sistema di trading crypto evolutivo (backend)"
# readme intenzionalmente omesso: il vero README è in <repo-root>/README.md.
# In container il build context è solo backend/, quindi `../README.md` non
# è raggiungibile e hatchling fallirebbe la metadata validation.
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Vincenzo Fuina", email = "vincenzo.fuina@gmail.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",  # per Alembic sync mode

    # Cache / pubsub
    "redis[hiredis]>=5.2.0",

    # Config & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Logging
    "structlog>=24.4.0",

    # Exchange / market data
    "ccxt>=4.4.30",

    # Numerical / data
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pandas-ta-classic>=0.5.40",  # fork mantenuto di pandas-ta (pure Python, no TA-Lib C)
    "scipy>=1.14.0",

    # ML / GA
    "deap>=1.4.1",
    "scikit-learn>=1.5.0",

    # LLM
    "anthropic>=0.40.0",

    # HTTP & async
    "httpx>=0.28.0",
    "tenacity>=9.0.0",  # retry logic

    # News parsing
    "feedparser>=6.0.11",

    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
    "types-pytz>=2024.2.0",
    "freezegun>=1.5.0",
    "ipython>=8.29.0",
    "jupyterlab>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TRY",  # tryceratops
    "ASYNC",# flake8-async
]
ignore = [
    "E501",   # line-length già gestito da ruff format
    "PLR0913",# troppi argomenti — accettiamo per costruttori espliciti
    "TRY003", # messaggi exception lunghi — preferiamo chiarezza
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "deap.*", "pandas_ta_classic.*", "feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
